--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -14,12 +14,6 @@ h1 {
   background-color: makerGreen;
 }
 
-.header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .middle {
   background-color: makerWhite;
   width: 100%;
@@ -30,4 +24,13 @@ h1 {
 
 .middleTitle {
   color: makerBlack;
+}
+
+.authGoogle {
+  border: 1px solid makerGreen;
+  border-radius: 10px;
+  width: 90%;
+  margin: 0.5rem 0;
+  text-align: center;
+  cursor: pointer;
 }
