--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,4 +1,11 @@
+@value makerGreen, makerWhite from '../../common/colors.css';
 .footer {
-  font-size: 0.5rem;
+  width: 100%;
+  height: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.7em;
   color: makerWhite;
+  background-color: makerGreen;
 }
