edit card-editor-form and css

--- a/src/components/preview/preview.module.css
+++ b/src/components/preview/preview.module.css
@@ -1,14 +1,12 @@
 @value makerGreen from '../../common/colors.css';
 
 .preview {
-  display: flex;
-  flex-direction: column;
   flex-basis: 50%;
-  align-items: center;
-  background-color: yellow;
 }
 
 .title {
+  width: 100%;
+  text-align: center;
   margin-bottom: 1em;
   color: makerGreen;
 }
