--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,4 +1,4 @@
-@value makerBlack, makerWhite, makerColorful, makerWheat from '../../common/colors.css';
+@value makerBlack, makerWhite, makerColorful, makerWheat, makerShadow from '../../common/colors.css';
 
 .card {
   display: flex;
@@ -9,6 +9,7 @@
   padding: 0.2em 0;
   max-width: 30rem;
   width: 100%;
+  box-shadow: 6px 6px 8px 0 makerShadow;
 }
 
 .card.dark {
