--- a/src/components/editor/editor.module.css
+++ b/src/components/editor/editor.module.css
@@ -1,13 +1,14 @@
-@value makerGreen from '../../common/colors.css';
+@value makerGreen, makerLightGrey from '../../common/colors.css';
 
 .editor {
-  display: flex;
-  flex-direction: column;
   flex-basis: 50%;
-  align-items: center;
+  border-right: 1px solid makerLightGrey;
+  padding: 0.5em 2em;
 }
 
 .title {
+  width: 100%;
+  text-align: center;
   color: makerGreen;
   margin-bottom: 1em;
 }
