--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -4,9 +4,11 @@
 .main {
   width: 100%;
   height: 100vh;
+  max-width: 80rem;
   display: flex;
   flex-direction: column;
   background-color: makerWhite;
+  min-height: 0;
 }
 
 .header {
